@@ -9,6 +9,7 @@ import com.codesupreme.mototaksiwebapi.model.lotoreya.Carx;
 import com.codesupreme.mototaksiwebapi.model.lotoreya.Lotoreya;
 import com.codesupreme.mototaksiwebapi.model.user.User;
 import com.codesupreme.mototaksiwebapi.service.inter.lotoreya.CarxServiceInter;
+import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
@@ -83,19 +84,35 @@ public class CarxServiceImpl implements CarxServiceInter {
         carxRepository.deleteById(id);
     }
 
+    @Transactional
     @Override
     public CarxDto assignWinner(Long lotoreyaId, List<String> finalistCodes) {
-        Lotoreya lotoreya = lotoreyaRepository.findById(lotoreyaId).orElse(null);
-        if (lotoreya == null || finalistCodes == null || finalistCodes.size() < 2) return null;
+        if (lotoreyaId == null || finalistCodes == null || finalistCodes.size() < 2) {
+            throw new RuntimeException("Zəhmət olmasa 2 finalist təqdim edin.");
+        }
 
+        // Lotoreyanı tapırıq
+        Lotoreya lotoreya = lotoreyaRepository.findById(lotoreyaId).orElse(null);
+        if (lotoreya == null) {
+            throw new RuntimeException("Lotoreya tapılmadı.");
+        }
+
+        // Bütün biletlərdən finalistləri süzürük
         List<Bilet> finalists = biletRepository.findByLotoreyaId(lotoreyaId).stream()
                 .filter(b -> finalistCodes.contains(b.getCode()))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (finalists.size() < 2) throw new RuntimeException("2 finalist tapılmadı.");
+        if (finalists.size() < 2) {
+            throw new RuntimeException("2 finalist bilet tapılmadı.");
+        }
 
+        // Qalib bilet random seçilir
         Bilet winnerBilet = finalists.get(new Random().nextInt(finalists.size()));
+        if (winnerBilet.getUser() == null) {
+            throw new RuntimeException("Qalib istifadəçi məlumatı tapılmadı.");
+        }
 
+        // Qalib üçün Carx obyektini yaradırıq
         Carx carx = Carx.builder()
                 .lotoreya(lotoreya)
                 .winnerUser(winnerBilet.getUser())
@@ -103,12 +120,14 @@ public class CarxServiceImpl implements CarxServiceInter {
                 .createdAt(new Date())
                 .build();
 
-        Carx saved = carxRepository.save(carx);
+        Carx savedCarx = carxRepository.save(carx);
 
-        lotoreya.setCarx(saved);
+        // Lotoreya ilə əlaqələndiririk
+        lotoreya.setCarx(savedCarx);
         lotoreyaRepository.save(lotoreya);
 
-        return modelMapper.map(saved, CarxDto.class);
+        return modelMapper.map(savedCarx, CarxDto.class);
     }
+
 
 }
